s3fnet-lxc/experiment-data/PLC_Simple_Client_Server/1457740947/lxc1-0
Starting Debug for lxc1-0
Running Command /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/run.sh -e 1 --node 1 /home/vignesh/Desktop/PLCs/awlsim-0.42/tests/modbus/simple_client_server/sfb102_client.awl
6 (process ID) old priority 0, new priority 10
=== Running tests with 'python3'
Running test 'sfb102_client.awl' with 'python3' ...   File "/home/vignesh/Desktop/PLCs/awlsim-0.42/tests/../awlsim-cli", line 244
    break
    ^
IndentationError: unexpected indent
=== TEST FAILED ===
Test 'sfb102_client.awl' FAILED
